# CatShelter

./: .gitignore  CMakeLists.txt  README.md  teste.txt
database/: gatosDB - BK.txt  gatosDB.txt
fichas/: FICHA-DE-ADOCAO--E-ƒmÒu.txt  FICHA-DE-ADOCAO-ANA LAURA-E-JORGE.txt  FICHA-DE-ADOCAO-GABRIEL COETTI-E-GAMORA.txt  FICHA-DE-ADOCAO-RAFAEL-E-GAMORA.txt
include/: adocao.h  catshelter.h  doacoes.h  gatos.h  header.h  listacde.h
lib/: adminPanel.c  adocao.c  doacoes.c  gatos.c  listacde.c  login.c  menu.c
src/: main.c  tasks.json
